--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,6 @@ title: PORTFOLIO
 logo
 description: Roblox VFX Artist | Content Creator
 #show_downloads: true
-theme: jekyll-theme-cayman
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme
