--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: PORTFOLIO
-description: Roblox VFX Artist | Content Creator
+description: RIFT
 #show_downloads: true
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
